Updating the Graphix files (and including a subjects folder).

--- a/subjects/graphix/conf/graphix-cc.conf
+++ b/subjects/graphix/conf/graphix-cc.conf
@@ -30,10 +30,15 @@ address=127.0.0.1
 [common]
 log.dir=logs/
 log.level=INFO
+compiler.cbo=false
 
 [extension/org.apache.asterix.graphix.extension.GraphixQueryTranslatorExtension]
 graphix.semantics.pattern=isomorphism
 graphix.semantics.navigation=no-repeat-anything
+graphix.evaluation.prefer-indexnl=false
+graphix.evaluation.minimize-joins=true
+graphix.compiler.lmkmemory=192KB
+graphix.compiler.permit.unbounded-all-paths=true
 
 ; We use dummy keys for the extension sections below.
 [extension/org.apache.asterix.graphix.extension.GraphixLangExtension]
